# ticket-triage-openenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start_chrome_scaler_debug.sh
scripts/: push_github.sh  push_github_and_hf.sh  push_hf_space.sh  run_all_steps.sh  validate-submission.sh
server/: __init__.py  app.py
ticket_triage_openenv/: __init__.py  models.py
ticket_triage_openenv/server/: __init__.py  app.py  support_environment.py
